--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
     />
 
     <title>The Wild Oasis</title>
+
+    <style>
+      body {
+        background-color: #e5e7eb;
+      }
+      @media (prefers-color-scheme: dark) {
+        body {
+          background-color: #374151;
+        }
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
